# GAI-android

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  download_prebuilt_lib.sh  gradle.properties  settings.gradle.kts  setup.sh
Breeze2-android-demo/: download_prebuilt_lib.sh  settings.gradle.kts
Breeze2-android-demo/app/: build.gradle.kts
Breeze2-android-demo/app/src/main/: AndroidManifest.xml
Breeze2-android-demo/app/src/main/cpp/: CMakeLists.txt
Breeze2-android-demo/app/src/main/res/drawable/: ic_camera.xml  ic_delete.xml  ic_home.xml  ic_image.xml  ic_mic_off.xml  ic_play.xml  ic_requirements.xml  ic_stop.xml  message_background.xml  tab_indicator_default.xml
Breeze2-android-demo/app/src/main/res/font/: noto_sans_tc.xml
Breeze2-android-demo/app/src/main/res/layout/: activity_chat.xml  activity_main.xml  intro_dialog_layout.xml  item_chat_message.xml  item_message.xml  recording_input_layout.xml
Breeze2-android-demo/app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
BreezeApp/: README.md  build_executorch.sh
BreezeApp/BreezeApp/: BreezeApp.swift  ContentView.swift  Info.plist.bak
BreezeApp/BreezeApp.xcodeproj/: project.pbxproj
BreezeApp/BreezeApp.xcodeproj/project.xcworkspace/xcuserdata/louischen.xcuserdatad/: UserInterfaceState.xcuserstate
BreezeApp/BreezeApp.xcodeproj/xcuserdata/muximacmini.xcuserdatad/xcschemes/: xcschememanagement.plist
BreezeApp/BreezeApp/Models/: ASRService.swift  LLMService.swift  Message.swift  TTSService.swift  VLMService.swift
BreezeApp/BreezeApp/UI/Common/: LogView.swift
BreezeApp/BreezeApp/Utils/: LogManager.swift  ResourceManager.swift
app/: build.gradle.kts
app/libs/: executorch.aar.sha256sums  executorch.aar.sha256sums-e
app/libs/arm64-v8a/: Functions.h  NativeFunctions.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/test_audio/: test_asr.m4a
app/src/main/cpp/: .gitattributes  CMakeLists.txt  llm_jni.cpp  vlm_jni.cpp  vlm_test.cpp
app/src/main/cpp/include/llava/: llava_image_prefiller.h  llava_runner.cpp  llava_runner.h  llava_runner_simplified.cpp  llava_runner_simplified.h  llava_text_decoder_runner.h
app/src/main/java/com/executorch/: ETImage.java  Executorch.java  ModelUtils.java  PromptFormat.java
app/src/main/jni/: Android.mk  Android_mllm.mk  CMakeLists.txt
app/src/main/jni/main/: Android.mk  Android_mllm.mk  CMakeLists.txt  main_llava.cpp  main_llm.h  main_medusa.cpp  main_origin.cpp  main_spec_dec.cpp
app/src/main/jni/prebuilt/: Android.mk
app/src/main/jni/prebuilt/src/: Android.mk  Android_mllm.mk  Application_mllm.mk  CMakeLists.txt  embedding_producer.h  image_transform.cpp  medusa_config.h  mtk_llm_types.h  mtk_mllm.cpp  mtk_mllm.h
app/src/main/jni/prebuilt/src/backend/: CMakeLists.txt  backend.h  neuron_api.h
app/src/main/jni/prebuilt/src/common/: Android.mk  CMakeLists.txt  dump.cpp  file_source.cpp  logging.cpp  logging.h
app/src/main/jni/prebuilt/src/executor/: Android.mk  allocator.cpp  allocator.h  executor.cpp  executor.h  executor_factory.h  llm_executor.h  llm_ringbuffer_executor.cpp  llm_ringbuffer_executor.h  macros.h  neuron_executor.h  neuron_usdk_executor.h  shared_weights.h  tflite_executor.cpp  tflite_executor.h
app/src/main/jni/prebuilt/src/llm_helper/: Android.mk  lora_weights_loader.cpp  mask_builder.cpp  ringbuffer_cache_manager.cpp  rotary_embedding.cpp
app/src/main/jni/prebuilt/src/llm_helper/include/: lora_weights_loader.h  mask_builder.h  ringbuffer_cache_manager.h  rotary_embedding.h  token_embedding.h
app/src/main/jni/prebuilt/src/tokenizer/: Android_SharedLib.mk  CMakeLists.txt  sentencepiece_tokenizer.cpp  sentencepiece_tokenizer.h  tiktoken_tokenizer.cpp  utils.h
app/src/main/jni/utils/: NPUWareUtilsLib.h  utils.cpp  utils.h
app/src/main/libs/arm64-v8a/: main  main_batch_gen  main_medusa  main_spec_dec
app/src/main/res/drawable/: bg_ai_message.xml  bg_circle.xml  bg_input_container.xml  bg_popup_menu.xml  bg_primary_button.xml  bg_user_message.xml  ic_add.xml  ic_add_conversation.xml  ic_arrow_down.xml  ic_audio_wave.xml  ic_folder.xml  ic_mic.xml  status_indicator_yellow.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  dialog_audio_list.xml  dialog_voice_selection.xml  intro_dialog_layout.xml  intro_page_layout.xml  item_chat_history.xml  item_chat_message.xml  item_message.xml  popup_menu_item.xml  recording_input_layout.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
breeze-app/: settings.gradle.kts
breeze-app/app/: build.gradle.kts
breeze-app/app/libs/: executorch.aar.sha256sums
breeze-app/app/src/main/assets/: .gitignore
breeze-app/app/src/main/res/drawable/: bg_audio_wave_circle.xml  bg_circle_button.xml  bg_dialog.xml  ic_features.xml  ic_gallery.xml  ic_more.xml  ic_pause.xml  ic_send.xml  ic_voice_selection.xml  status_indicator_green.xml  status_indicator_red.xml  tab_indicator_selected.xml
breeze-app/app/src/main/res/font/: nunito.xml
breeze-app/gradle/wrapper/: gradle-wrapper.properties
gradle/: libs.versions.toml
tmp_folder/: LlmNative.java  LlmOperation.java  LlmService.java
tmp_folder/jni/: Application.mk
tmp_folder/jni/main/: main_Jeff.cpp  main_batch_gen.cpp  main_llava_spec_dec.cpp
tmp_folder/jni/prebuilt/: Android_mllm.mk
tmp_folder/jni/prebuilt/include/tokenizer/: tokenizer.h
tmp_folder/jni/prebuilt/src/: Application.mk  image_transform.h  mtk_llm.cpp  mtk_llm.h
tmp_folder/jni/prebuilt/src/backend/: Android.mk  backend.cpp
tmp_folder/jni/prebuilt/src/common/: scope_profiling.cpp
tmp_folder/jni/prebuilt/src/executor/: CMakeLists.txt  llm_executor.cpp  llm_medusa_executor.cpp  llm_medusa_executor.h  multi_runtime_handler.cpp  neuron_executor.cpp  neuron_usdk_executor.cpp  shared_weights.cpp
tmp_folder/jni/prebuilt/src/llm_helper/: CMakeLists.txt  token_embedding.cpp
tmp_folder/jni/prebuilt/src/llm_helper/include/: utils.h
tmp_folder/jni/prebuilt/src/tokenizer/: huggingface_tokenizer.cpp  huggingface_tokenizer.h  tokenizer.cpp
tmp_folder/jni/utils/: Android.mk  CMakeLists.txt  NPUWareUtilsLib.cpp
(+120 files in other folders)
